

## Fixed

 - Set actions on Property commands targeting structs now save changes. Previously the target variable was not being copied back to the internal struct, causing changes to be discarded. Impacts the following Property Commands, Color, Matrix, Quaternion, Vector2, Vector3, Vector4.
 - Writer with 0 speed and TMPro text correctly writes at infinite speed, previously was infinite loop.

## Changed

 - Conversation System finding character by name now uses an exact match with fallback to previous StartsWith. Thanks to hsandt.


v3.13.3
======

## Fixed

 - View Gizmo Drawer specifies type of View, no longer tries to run for every object in scene.
 - TMProLinkAnim dictionary errors caused by duplicate entries when Domain Reload is disabled, Thanks to yano.
 - Divide Equal now uses Unicode characters in place of ASCII slash in menus, so it shows correctly.

v3.13.2
======

## Fixed

- Restore string VariableSubstitution in use of AnyVariableDataPair, found in SetVariable and VariableCondition (#841)
- Float variable comparison, typo causing comparison to self instead of rhs(#836)

v3.13.1
======

## Fixed

- Build error in JsonChecker caused by missing asmdef in newer Unity versions. (#833)

v3.13.0
======

## Added

- Conditional Commands now support multiple comparisons as a chain of && or ||. Thanks to preda2or, and AcademyOfF
- IWriterListener OnAllWorldsWritten fires when there are no words left to be written but writer may still have pending waits
- Entry based NarrativeLog alternate. Thanks to cg-tespy
- Option to grid snap blocks in the FlowchartWindow.
- TMPro Text animation via link text.
- Fungus Collection, varaibles, default types, and commands.
- Github Issue and PR templates.

## Fixed

- Portrait image shown as white when cycled through rapidly.
- Flowchart Window Search box steals focus
- Mushroom icon placement incorrect on some versions of Unity. Thanks to TonyJeffree