@@ -9,6 +9,7 @@ Unreleased
 
  - Set actions on Property commands targeting structs now save changes. Previously the target variable was not being copied back to the internal struct, causing changes to be discarded. Impacts the following Property Commands, Color, Matrix, Quaternion, Vector2, Vector3, Vector4.
  - Writer with 0 speed and TMPro text correctly writes at infinite speed, previously was infinite loop.
+ - Collection Contains* commands now actually show the field to store boolean result.
 
 ## Changed
 
